<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <data>

   </data>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:context=".fragments.request.RequestFragment"
       android:orientation="vertical">

      <include android:id="@+id/toolbar"
          layout="@layout/toolbar_item2" />

      <ScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:paddingBottom="150dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/byModule"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="#F4F4F4"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal">

                  <ImageView
                      android:layout_width="50dp"
                      android:layout_height="50dp"
                      android:src="@drawable/ic_requestt"
                      android:gravity="center_vertical"
                      android:layout_marginTop="16dp"
                      android:layout_marginLeft="16dp"
                      android:layout_marginRight="16dp" />

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/module"
                         android:textStyle="bold"
                         android:layout_marginTop="16dp"
                         style="@style/bigText" />

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/modulesStatus"
                         android:layout_marginTop="8dp"
                         style="@style/smallText" />

                  </LinearLayout>
               </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/byClients"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="#F4F4F4"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="16dp"
                app:cardElevation="0dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal">

                  <ImageView
                      android:layout_width="50dp"
                      android:layout_height="50dp"
                      android:src="@drawable/ic_requestt"
                      android:gravity="center_vertical"
                      android:layout_marginTop="16dp"
                      android:layout_marginLeft="16dp"
                      android:layout_marginRight="16dp" />

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/client"
                         android:textStyle="bold"
                         android:layout_marginTop="16dp"
                         style="@style/bigText" />

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/modulesClients"
                         android:layout_marginTop="8dp"
                         style="@style/smallText" />

                  </LinearLayout>
               </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/kg"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="#F4F4F4"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="16dp"
                app:cardElevation="0dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal">

                  <ImageView
                      android:layout_width="50dp"
                      android:layout_height="50dp"
                      android:src="@drawable/ic_requestt"
                      android:gravity="center_vertical"
                      android:layout_marginTop="16dp"
                      android:layout_marginLeft="16dp"
                      android:layout_marginRight="16dp" />

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/kyrgyzstan09"
                         android:layout_marginTop="16dp"
                         android:textStyle="bold"
                         style="@style/bigText" />

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/todayAgents"
                         android:layout_marginTop="8dp"

                         style="@style/smallText" />

                  </LinearLayout>
               </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/byDynamic"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:backgroundTint="#F4F4F4"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="16dp"
                app:cardElevation="0dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal">

                  <ImageView
                      android:layout_width="50dp"
                      android:layout_height="50dp"
                      android:src="@drawable/ic_requestt"
                      android:gravity="center_vertical"
                      android:layout_marginTop="16dp"
                      android:layout_marginLeft="16dp"
                      android:layout_marginRight="16dp" />

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical">

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/dynamic"
                         android:textStyle="bold"
                         android:layout_marginTop="16dp"
                         style="@style/bigText" />

                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/todayAgentsDynamic"
                         android:layout_marginTop="8dp"
                         style="@style/smallText" />

                  </LinearLayout>
               </LinearLayout>
            </androidx.cardview.widget.CardView>
         </LinearLayout>
      </ScrollView>
   </LinearLayout>
</layout>