<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/img_auth"/>

        <ImageView
            android:id="@+id/img_auth"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="56dp"
            android:layout_marginStart="86dp"
            android:layout_marginEnd="86dp"
            android:src="@drawable/shutterstock_1992" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_auth">

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/img_auth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/login"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                style="@style/header"/>

            <EditText
                android:id="@+id/edLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit"
                android:drawableStart="@drawable/ic_login"
                android:drawablePadding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLogin"
                android:paddingStart="18dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="4dp"
              />

            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/password"
                style="@style/header"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintBottom_toTopOf="@+id/edPassword"
                android:layout_marginTop="16dp" />

<com.google.android.material.textfield.TextInputLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:endIconMode="password_toggle"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/ic_key"
        android:paddingStart="18dp"
        android:inputType="textPassword"
        android:background="@drawable/edit"


    />
</com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/logIn"
                style="@style/button_txt"
                android:drawablePadding="8dp"
                android:backgroundTint="@color/blue"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>